--- a/static/css/default.css
+++ b/static/css/default.css
@@ -43,3 +43,24 @@ body{
     background-color: #FFB114;
     border: 1px solid #543800;
 }
+
+.card{
+    font-family: Comfortaa;
+}
+
+.card .form-control{
+    margin: 10px 0px;
+    box-shadow: 0px 3px 6px rgb(0, 14, 53);
+}
+
+.card .card-title{
+    color: white;
+}
+.card button{
+    background-color: #FF4E00;
+    border: 1px solid #8B2B00;
+    box-shadow: 0px 3px 6px rgb(0, 14, 53);
+    color: white;
+    width: 200px;
+    margin: 10px 0px;
+}
